# headroom install project — the locked source of truth for the fleet's
# headroom-ai pin. headroom-ai (the AI context-compression proxy that replaces
# the legacy token-minifier) IS published to PyPI with versioned releases, so —
# unlike the SkillSpector git-SHA pin — this is a plain version pin wrapped in a
# uv.lock that manifests EVERY transitive dependency version + sha256 hash. That
# is the most locked-down form the install can take: `uv sync --locked` installs
# exactly this closure, hash-verified, into the `_dlx/<hash>/` content-addressed
# store (see scripts/fleet/install-headroom.mts) — reproducible across machines
# and across time.
#
# The pin lives in three places kept in lockstep by headroom-pin-is-consistent.mts:
#   1. project.dependencies headroom-ai==<version>  — the pinned version here
#   2. uv.lock                                       — the resolved closure
#   3. external-tools.json headroom.version          — the fleet-canonical pin
#
# `exclude-newer` pins resolution to packages published on/before the 7-day soak
# boundary (the minimumReleaseAge analog), so the lock can never silently pull a
# dependency version newer than the soak window. headroom-ai is pre-1.0 (Beta) —
# the same noted exception the fleet made for uv itself; the pin + hash-lock +
# soak are the mitigation. The `[proxy]` extra gives the proxy + MCP server +
# ONNX-INT8 text compression and deliberately AVOIDS pytorch.
[project]
name = "socket-headroom-pin"
version = "0.0.0"
description = "Fleet-pinned headroom-ai install (locked transitive closure of the proxy extra)."
requires-python = ">=3.10"
dependencies = ["headroom-ai[proxy]==0.30.0"]

[tool.uv]
# Resolve against the package index as it existed on the soak boundary.
exclude-newer = "2026-06-10T00:00:00Z"
# Per-package soak exceptions (the uv analog of pnpm's minimumReleaseAgeExclude):
# - headroom-ai 0.30.0 published 2026-07-03, vetted manually and bypassed inside
#   the 7-day window. Routine currency bump (the running proxy was a stale 0.24.0
#   build, 9.5-day uptime). NOTE: the proper-noun garble in large tool reads
#   (headroom to "nil", depot to "ln", npm to "n") was headroom's DEFAULT lossy
#   `token` mode, not a version bug; the fix is running the proxy `--lossless`
#   AND `--disable-kompress` (the Kompress ML layer was the proper-noun
#   abbreviator; MEASURED as needed on top of --lossless). See
#   headroom-proxy-start/index.mts. Drop this bypass once it clears the soak
#   (2026-07-10).
# - starlette < 1.3.1 carries GHSA-82w8-qh3p-5jfq (high) + others, and 1.3.1 is
#   the only fixed release, published 2026-06-12 just past the global boundary.
#   An emergency CVE patch is the documented reason to bypass the soak. Drop once
#   1.3.1 clears the 7-day soak (2026-06-19) and exclude-newer advances past it.
# - pydantic-settings < 2.14.2 carries GHSA-4xgf-cpjx-pc3j (medium: NestedSecrets
#   symlink read outside secrets_dir); 2.14.2 published 2026-06-19. User-authorized
#   soak-bypass; drop once it clears the 7-day soak (2026-06-26).
# - mcp < 1.28.1 is a high Dependabot advisory; 1.28.1 published 2026-06-26 (already
#   past the 7-day soak). The 06-27 cutoff pins 1.28.1 and excludes the 2.0.0b2
#   prerelease (2026-07-14). Drop once the global exclude-newer advances past it.
exclude-newer-package = { headroom-ai = "2026-07-04T00:00:00Z", mcp = "2026-06-27T00:00:00Z", pydantic-settings = "2026-06-20T00:00:00Z", starlette = "2026-06-13T00:00:00Z" }
# Force the security-fixed floors past headroom-ai 0.24.0's transitive caps:
# litellm < 1.84.0 carries 6 critical advisories (GHSA-4xpc-pv4p-pm3w et al.);
# 1.84.6 (2026-06-09) is the latest soaked fix. starlette per the note above.
# mcp < 1.28.1 is a high Dependabot advisory; 1.28.1 is the patched floor.
override-dependencies = ["litellm>=1.84.6", "mcp>=1.28.1", "pydantic-settings>=2.14.2", "starlette>=1.3.1"]
# Use only the uv-managed CPython under the _dlx store — never a system Python.
python-preference = "only-managed"
